[package]
name = "untitled"
version = "0.1.0"
authors = ["simleek <josh.miklos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "^0.19.0"
vulkano-shaders = "^0.19.0"
vulkano-win = "^0.19.0"
vk-sys = "^0.5.0"
gl = "0.10.0"
glfw = "0.23.0"